fix: - change images - update banner5 styles - fix gap between blocks

--- a/components/image/image.css
+++ b/components/image/image.css
@@ -3,25 +3,7 @@
   width: 100%;
   overflow: hidden;
 }
-.custom-image {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  max-height: 600px;
-}
 
-.custom-image::before {
-  content: none;
-}
-.custom-image img {
-  position: relative;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-}
 .image.cover img {
   object-fit: cover;
 }
@@ -46,6 +28,15 @@
   left: 0;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.image #banner5 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 130%;
   object-fit: cover;
   object-position: center;
 }
