--- a/styles.css
+++ b/styles.css
@@ -1144,7 +1144,7 @@ hr {
     }
 
     .info {
-        margin: 72px 20px 36px;
+        margin: 30px 20px 36px;
         gap: 12px;
     }
 
